--- a/style.css
+++ b/style.css
@@ -4,9 +4,8 @@
 
 body {
     background: #92bde7;
-    color: #485e74;
-    line-height: 1.6;
-    font-family: 'Segoe UI', Tahoma, sans-serif;
+    color: #586e73;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     padding: 1em;
 }
 
@@ -19,14 +18,19 @@ body {
 
 ul {
     list-style: none;
+    padding: 0;
 }
 
 .brand span {
-    color: white;
+    color: #fff;
+}
+
+.brand {
+    text-align: center;
 }
 
 .wrapper {
-    box-shadow: 0 0 20px 0 rgba(72, 94, 116, 0.7);
+    box-shadow: 0 0 20px 0 rgba(72, 95, 116, 0.7);
 }
 
 .wrapper > * {
@@ -37,7 +41,7 @@ ul {
     background: #c9e6ff;
 }
 
-.company-info, h3, .company-info ul {
+.company-info h3, .company-info ul {
     text-align: center;
     margin: 0 0 1rem 0;
 }
@@ -46,7 +50,7 @@ ul {
     background: #f9feff;
 }
 
-/* Form styles */
+/* Form Styles */
 .contact form {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -62,13 +66,13 @@ ul {
 }
 
 .contact form .full {
-    grid-column: 1 / 3;
+    grid-column: 1/3;
 }
 
 .contact form button, .contact form input, .contact form textarea {
     width: 100%;
     padding: 1em;
-    border: 1px solid #69e6ff;
+    border: 1px solid #c9e6ff;
 }
 
 .contact form button {
@@ -77,15 +81,25 @@ ul {
     text-transform: uppercase;
 }
 
-.contact form button:hover, .contact form button:focus {
+.contact form button:hover, .contact form button:focus{
     background: #92bde7;
     color: #fff;
     outline: 0;
-    transition: background-color 2s ease-out;
+    transition: background-color 1s ease-out;
+    transition: color 0.5s ease-out;
+}
+
+.alert {
+    text-align: center;
+    padding: 10px;
+    background: #79c879;
+    color: #fff;
+    margin-bottom: 10px;
+    display: none;
 }
 
 /* Large Screens */
-@media(min-width: 700px){
+@media(min-width: 700px) {
     .wrapper {
         display: grid;
         grid-template-columns: 1fr 2fr;
